[0ecd4e761476c2774ef88a179f7cb016c4751481]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -2330,7 +2330,7 @@ Below we specify any existing differences:</p>
 
 <ul>
   <li>
-    <p>Internal MPI: service already integrated with 3DS Cielo solution, without the need for additional integration and/or hiring. In case of using the Internal MPI for 3DS 1.0 go to the step “[Default Transaction] (inserir link)”.</p>
+    <p>Internal MPI: service already integrated with 3DS Cielo solution, without the need for additional integration and/or hiring. In case of using the Internal MPI for 3DS 1.0 go to the step “<a href="https://developercielo.github.io/en/manual/cielo-ecommerce#default-transaction">Default Transaction</a>”.</p>
   </li>
   <li>
     <p>External MPI: service hired by the merchant, without the interference from Cielo. It is very used when the merchant already has a contracted MPI supplier. In case of using the external MPI for the 3DS 1.0, follow the next step “External Authentication 3DS 1.0”.</p>
@@ -9575,7 +9575,7 @@ It is possible to carry out both the total cancellation and the partial cancella
   </tbody>
 </table>
 
-<p>In all instances, the scheduled recurrence is a standard transaction for Cielo, its only difference being the need to send an additional parameter that defines it as <strong>Own Recurrence</strong></p>
+<p>In all instances, the scheduled recurrence is a default transaction for Cielo, its only difference being the need to send an additional parameter that defines it as <strong>Own Recurrence</strong></p>
 
 <p><strong>Parameter:</strong> <code class="highlighter-rouge">Payment.Recurrent</code>= <code class="highlighter-rouge">True</code></p>
 
