--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -1225,8 +1225,6 @@ Abaixo especificamos qualquer diferença existente:</p>
         </span><span class="p">}</span><span class="w">
    </span><span class="p">},</span><span class="w">
    </span><span class="nl">"Payment"</span><span class="p">:{</span><span class="w">  
-     </span><span class="nl">"Type"</span><span class="p">:</span><span class="s2">"CreditCard"</span><span class="p">,</span><span class="w">
-     </span><span class="nl">"Amount"</span><span class="p">:</span><span class="mi">15700</span><span class="p">,</span><span class="w">
      </span><span class="nl">"Currency"</span><span class="p">:</span><span class="s2">"BRL"</span><span class="p">,</span><span class="w">
      </span><span class="nl">"Country"</span><span class="p">:</span><span class="s2">"BRA"</span><span class="p">,</span><span class="w">
      </span><span class="nl">"ServiceTaxAmount"</span><span class="p">:</span><span class="mi">0</span><span class="p">,</span><span class="w">
@@ -1247,7 +1245,12 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="nl">"Reason"</span><span class="p">:</span><span class="s2">"Unscheduled"</span><span class="w">
          </span><span class="p">}</span><span class="w">
      </span><span class="p">},</span><span class="w">
-     </span><span class="nl">"IsCryptoCurrencyNegotiation"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="w">
+     </span><span class="nl">"IsCryptoCurrencyNegotiation"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
+     </span><span class="nl">"Type"</span><span class="p">:</span><span class="s2">"CreditCard"</span><span class="p">,</span><span class="w">
+     </span><span class="nl">"Amount"</span><span class="p">:</span><span class="mi">15700</span><span class="p">,</span><span class="w">
+     </span><span class="nl">"AirlineData"</span><span class="p">:{</span><span class="w">
+         </span><span class="nl">"TicketNumber"</span><span class="p">:</span><span class="s2">"AR988983"</span><span class="w">
+     </span><span class="p">}</span><span class="w">
    </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
@@ -1287,8 +1290,6 @@ Abaixo especificamos qualquer diferença existente:</p>
         <span class="o">}</span>
    <span class="o">}</span>,
    <span class="s2">"Payment"</span>:<span class="o">{</span>  
-     <span class="s2">"Type"</span>:<span class="s2">"CreditCard"</span>,
-     <span class="s2">"Amount"</span>:15700,
      <span class="s2">"ServiceTaxAmount"</span>:0,
      <span class="s2">"Installments"</span>:1,
      <span class="s2">"Interest"</span>:<span class="s2">"ByMerchant"</span>,
@@ -1307,7 +1308,12 @@ Abaixo especificamos qualquer diferença existente:</p>
             <span class="s2">"Reason"</span>:<span class="s2">"Unscheduled"</span>
          <span class="o">}</span>
      <span class="o">}</span>,
-     <span class="s2">"IsCryptoCurrencyNegotiation"</span>: <span class="nb">true</span>
+     <span class="s2">"IsCryptoCurrencyNegotiation"</span>: <span class="nb">true</span>,
+     <span class="s2">"Type"</span>:<span class="s2">"CreditCard"</span>,
+     <span class="s2">"Amount"</span>:15700,
+     <span class="s2">"AirlineData"</span>:<span class="o">{</span>
+         <span class="s2">"TicketNumber"</span>:<span class="s2">"AR988983"</span>
+     <span class="o">}</span>
    <span class="o">}</span>
 <span class="o">}</span>
 <span class="nt">--verbose</span>
@@ -1577,6 +1583,13 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Deve ser enviado com valor “true” caso se trate de uma transação de compra ou venda de Criptomoeda</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">Payment.TicketNumber</code></td>
+      <td>alfanumérico</td>
+      <td>13</td>
+      <td>Não</td>
+      <td>Informar o número do principal bilhete aéreo da transação.</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">CreditCard.CardNumber</code></td>
       <td>Texto</td>
       <td>19</td>
@@ -1692,6 +1705,9 @@ Abaixo especificamos qualquer diferença existente:</p>
         </span><span class="nl">"Amount"</span><span class="p">:</span><span class="w"> </span><span class="mi">15700</span><span class="p">,</span><span class="w">
         </span><span class="nl">"CapturedAmount"</span><span class="p">:</span><span class="w"> </span><span class="mi">15700</span><span class="p">,</span><span class="w">
         </span><span class="nl">"Country"</span><span class="p">:</span><span class="w"> </span><span class="s2">"BRA"</span><span class="p">,</span><span class="w">
+        </span><span class="nl">"AirlineData"</span><span class="p">:{</span><span class="w">
+            </span><span class="nl">"TicketNumber"</span><span class="p">:</span><span class="w"> </span><span class="s2">"AR988983"</span><span class="w">
+        </span><span class="p">},</span><span class="w">
         </span><span class="nl">"ExtraDataCollection"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
         </span><span class="nl">"Status"</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p">,</span><span class="w">
         </span><span class="nl">"ReturnCode"</span><span class="p">:</span><span class="w"> </span><span class="s2">"6"</span><span class="p">,</span><span class="w">
