[feed8fa848f30e5b8da00a435ab4f8b4307731b7]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5140,7 +5140,7 @@ Abaixo especificamos qualquer diferença existente:</p>
 
 <p>Basta realizar um <code class="highlighter-rouge">POST</code> enviando o valor a ser cancelado.</p>
 
-<aside class="notice">Atenção: Cancelamento parcial é disponível apenas para transações de crédito *CAPTURADAS*</aside>
+<aside class="notice">Atenção: Cancelamento parcial é disponível apenas para transações *CAPTURADAS*</aside>
 
 <aside class="notice">Atenção: O retorno da API soma o total de cancelamentos Parciais, ou seja, se 3 cancelamentos de R$10,00 forem realizados, a API apresentará em seu retorno um total de R$30,00 cancelados</aside>
 
@@ -6821,7 +6821,7 @@ Abaixo especificamos qualquer diferença existente:</p>
 
 <p>Basta realizar um <code class="highlighter-rouge">POST</code> enviando o valor a ser cancelado.</p>
 
-<aside class="notice">Atenção: Cancelamento parcial disponível apenas para transações de crédito *CAPTURADAS*</aside>
+<aside class="notice">Atenção: Cancelamento parcial disponível apenas para transações *CAPTURADAS*</aside>
 
 <aside class="notice">Atenção: O retorno da API soma o total de cancelamentos Parciais, ou seja, se 3 cancelamentos de R$10,00 forem realizados, a API apresentará em seu retorno um total de R$30,00 cancelados</aside>
 
