--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -3201,8 +3201,8 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
 <p>Caso uma das transações da recorrência não seja autorizada, o Checkout Cielo executa a retentativa automaticamente, o envio de uma nova transação, considerando:</p>
 
 <ul>
-  <li><strong>Intervalo de tempo entre as tentativas:</strong> 1 dia</li>
-  <li><strong>Quantidade de retentativas:</strong> 3 (três), uma por dia, por 3 dias corridos a partir do dia seguinte da transação original não autorizada.</li>
+  <li><strong>Intervalo de tempo entre as tentativas:</strong> 4 dias</li>
+  <li><strong>Quantidade de retentativas:</strong> 4 (quatro), uma por dia, por 4 dias corridos a partir do dia seguinte da transação original não autorizada.</li>
 </ul>
 
 <p><strong>OBS</strong>: Esse processo visa manter obter uma resposta positiva do processo de autorização, impedindo o lojista de perder a venda. O Processo de retentativa gera pedidos duplicados dentro do Backoffice, pois o pedido original, negado, será apresentado na lista de Pedidos, junto com a nova transação autorizada</p>
