--- a/en/manual/checkout-cielo.html
+++ b/en/manual/checkout-cielo.html
@@ -3182,8 +3182,8 @@ If there is a recurrence node in the technical contract, the <code class="highli
 <p>If one of the recurrence transactions is not authorized, Checkout Cielo performs the retry automatically, sending a new transaction, considering:</p>
 
 <ul>
-  <li><strong>Time interval between attempts:</strong> 1 day</li>
-  <li><strong>Number of retries:</strong> 3 (three), one per day, for 3 consecutive days from the day following the unauthorized original transaction.</li>
+  <li><strong>Time interval between attempts:</strong> 3 days</li>
+  <li><strong>Number of retries:</strong> 4 (four), one per day, for 4 consecutive days from the day following the unauthorized original transaction.</li>
 </ul>
 
 <p><strong>NOTE</strong>: This process aims to maintain a positive response to the authorization process, preventing the merchant from losing the sale. The Retry Process generates duplicate orders within the Backoffice because the original order, the one declined, will be displayed in the Orders list, along with the new authorized transaction</p>
