[00c566bd281bce9fff9dd5428ba5de4748aecd53]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -1583,7 +1583,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Deve ser enviado com valor “true” caso se trate de uma transação de compra ou venda de Criptomoeda</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">Payment.TicketNumber</code></td>
+      <td><code class="highlighter-rouge">Payment.AirlineData.TicketNumber</code></td>
       <td>alfanumérico</td>
       <td>13</td>
       <td>Não</td>
