[89ea40fa1aae00278623ea9298a702a8516e181e]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -1575,7 +1575,7 @@ Below we specify any existing differences:</p>
       <td>Send true if the transaction refers to the sell of the cryptocurrency</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">Payment.TicketNumber</code></td>
+      <td><code class="highlighter-rouge">Payment.AirlineData.TicketNumber</code></td>
       <td>alphanumeric</td>
       <td>13</td>
       <td>No</td>
