--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -169,13 +169,74 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
 <p>In order to send transactions with request for 3DS 2.0 authentication, it is important that, besides Cielo, the issuer and the card brand are ready with the solution. 
 Currently are available:</p>
 
-<p><strong>- Mastercard:</strong> the brand has a Stand-In model, in case that the issuer is not able yet to respond an authenticated request using 3DS 2.0 EMV. In this scenario, Mastercard evaluates the uploaded data, for example the client’s historical behavioral and transactional classifying authentication requests as “Low Risk” and “No Low Risk” in Stand-In mode. With this information, the Issuers have a protection even if they do not have their own solution of 3DS 2.0, and will have greater confidence in authenticated transactions. In Stand-In cases, Mastercard will respond to the authentication in 100% of cases silently (no challenge to the carrier) and, once the transaction has been authenticated, the liability in case of fraud will remain with the Issuer.</p>
-
-<aside class="notice">Issuers that are ready with its own solution of 3DS 2.0 Mastercard: Santander (Debit and Credit), PagSeguro (Credit), C6 (Debit and Credit), Realize (Credit), Itaú (Credit) and Acesso (Credit). The rest of the issuers will work,  for the time being, with the Mastercard Stand-In solution.</aside>
+<p><strong>- Mastercard:</strong> the brand has a Stand-In model, in case that the issuer is not able yet to respond an authenticated request using 3DS 2.0 EMV. In this scenario, Mastercard evaluates the uploaded data, for example the client’s historical behavioral and transactional classifying authentication requests as “Low Risk” and “No Low Risk” in Stand-In mode. With this information, the Issuers have a protection even if they do not have their own solution of 3DS 2.0, and will have greater confidence in authenticated transactions. In Stand-In cases, Mastercard will respond to the authentication in 100% of cases silently (no challenge to the carrier) and, once the transaction has been authenticated, the liability in case of fraud will remain with the Issuer. The decision to authorize the transaction or not is to the Issuer.</p>
 
 <p><strong>- Visa:</strong> the card brand does not has a Stand-In model and just issuers 100% ready with its own solution are able to respond to an authenticated request using the 3DS 2.0 EMV.</p>
 
-<aside class="notice"> Issuers that are ready with its own solution of 3DS 2.0 Visa: Caixa (Credit – currently with silent authentication, no challenge), Santander (Debit and Credit), Itaú (Credit – currently with silent authentication, no challenge), Porto Seguro (Credit), Banco Neon (Credit) and Midway (Credit).</aside>
+<table>
+  <tbody>
+    <tr>
+      <td> </td>
+      <td><strong>CARDS BRANDS</strong></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><strong>ISSUE BANK</strong></td>
+      <td><strong>MASTERCARD</strong></td>
+      <td><strong>VISA</strong></td>
+    </tr>
+    <tr>
+      <td>Caixa Econômica</td>
+      <td>—</td>
+      <td>Credit</td>
+    </tr>
+    <tr>
+      <td>Santander</td>
+      <td>Credit/Debit</td>
+      <td>Credit/Debit</td>
+    </tr>
+    <tr>
+      <td>Itaú</td>
+      <td>Credit</td>
+      <td>Credit</td>
+    </tr>
+    <tr>
+      <td>Midway</td>
+      <td>—</td>
+      <td>Credit</td>
+    </tr>
+    <tr>
+      <td>PagSeguro</td>
+      <td>Credit</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td>Acesso</td>
+      <td>—</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td>Banco Neon</td>
+      <td>Credit</td>
+      <td>Credit</td>
+    </tr>
+    <tr>
+      <td>Realize</td>
+      <td>Credit</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td>C6</td>
+      <td>Credit/Debit</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td>Porto Seguro</td>
+      <td>—</td>
+      <td>Credit</td>
+    </tr>
+  </tbody>
+</table>
 
 <h2 id="what-is-the-data-only---notification-only">What is the Data Only - Notification Only</h2>
 
