[afaf5845cbfed9b547eb51cda5f13d8144e7e381]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -490,6 +490,12 @@ MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmeiLngFr9h0npwe6D3ArSi10ZgdOCUCsUYT1
   <li><strong>Produção</strong> : <strong>api.cielo.com.br</strong>. Deve-se utilizar quando portar as credenciais de produção e um bom nível de maturidade com o ambiente de homologação.</li>
 </ul>
 
+<h1 id="códigos-da-api">Códigos da API</h1>
+
+<h2 id="erros-da-api">Erros da API</h2>
+
+<h2 id="erros-de-pagamento">Erros de Pagamento</h2>
+
 <h1 id="dúvidas-frequentes">Dúvidas Frequentes</h1>
 
 <ul>
