--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -252,6 +252,8 @@ MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmeiLngFr9h0npwe6D3ArSi10ZgdOCUCsUYT1
 
 </code></pre></div></div>
 
+<h3 id="criptografia">Criptografia</h3>
+
 <h3 id="payments">Payments</h3>
 
 <p>O recurso <strong>POST /payments</strong> é responsável por efetuar o pagamento com base nos dados contidos no payload da requisição. No header da requisição é necessário os dados de <strong>client_id</strong>, <strong>access_token</strong>, <strong>Content-type</strong> e <strong>wallet</strong>. Wallet representa a carteira digital da aplicação sendo única por app. O corpo da requisição é composto por dados provenientes do aplicativo e do QR Code. <strong>Verificar seção 3 para os campos extraídos do QR Code</strong>.</p>
