[c43653264b32ae9fcf7639616703cbc4cdcd68f8]: Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -7123,6 +7123,10 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td>5</td>
       <td>cancellation declined</td>
     </tr>
+    <tr>
+      <td>7</td>
+      <td>Chargeback notification <br /> More details <a href="https://braspag.github.io//en/manual/risknotification">Risk Notification</a></td>
+    </tr>
   </tbody>
 </table>
 
