--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -7239,6 +7239,10 @@ Esses eventos são cadastros pela equipe de suporte Cielo, quando requisitado pe
       <td>5</td>
       <td>cancelamento negado</td>
     </tr>
+    <tr>
+      <td>7</td>
+      <td>Notificação de chargeback <br /> Para mais detalhes <a href="https://braspag.github.io//manual/risknotification">Risk Notification</a></td>
+    </tr>
   </tbody>
 </table>
 
