--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -5426,6 +5426,17 @@ PaymentIds associated with the identifier.</p>
         </span><span class="p">},</span><span class="w">
         </span><span class="nl">"ProofOfSale"</span><span class="p">:</span><span class="w"> </span><span class="s2">"674532"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"AuthorizationCode"</span><span class="p">:</span><span class="w"> </span><span class="s2">"123456"</span><span class="p">,</span><span class="w">
+        </span><span class="nl">"Chargebacks"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
+            </span><span class="p">{</span><span class="w">
+                </span><span class="nl">"Amount"</span><span class="p">:</span><span class="w"> </span><span class="mi">10000</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"CaseNumber"</span><span class="p">:</span><span class="w"> </span><span class="s2">"123456"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"Date"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2017-06-04"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"ReasonCode"</span><span class="p">:</span><span class="w"> </span><span class="s2">"104"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"ReasonMessage"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Outras Fraudes - Cartao Ausente"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"Status"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Received"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"RawData"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Client did not participate and did not authorize transaction"</span><span class="w">
+            </span><span class="p">}</span><span class="w">
+        </span><span class="p">],</span><span class="w">
         </span><span class="nl">"PaymentId"</span><span class="p">:</span><span class="w"> </span><span class="s2">"24bc8366-fc31-4d6c-8555-17049a836a07"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"Type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"CreditCard"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"Amount"</span><span class="p">:</span><span class="w"> </span><span class="mi">15700</span><span class="p">,</span><span class="w">
@@ -5478,6 +5489,17 @@ PaymentIds associated with the identifier.</p>
         <span class="o">}</span>,
         <span class="s2">"ProofOfSale"</span>: <span class="s2">"674532"</span>,
         <span class="s2">"AuthorizationCode"</span>: <span class="s2">"123456"</span>,
+        <span class="s2">"Chargebacks"</span>: <span class="o">[</span>
+            <span class="o">{</span>
+                <span class="s2">"Amount"</span>: 10000,
+                <span class="s2">"CaseNumber"</span>: <span class="s2">"123456"</span>,
+                <span class="s2">"Date"</span>: <span class="s2">"2017-06-04"</span>,
+                <span class="s2">"ReasonCode"</span>: <span class="s2">"104"</span>,
+                <span class="s2">"ReasonMessage"</span>: <span class="s2">"Outras Fraudes - Cartao Ausente"</span>,
+                <span class="s2">"Status"</span>: <span class="s2">"Received"</span>,
+                <span class="s2">"RawData"</span>: <span class="s2">"Client did not participate and did not authorize transaction"</span>
+            <span class="o">}</span>
+        <span class="o">]</span>,
         <span class="s2">"PaymentId"</span>: <span class="s2">"24bc8366-fc31-4d6c-8555-17049a836a07"</span>,
         <span class="s2">"Type"</span>: <span class="s2">"CreditCard"</span>,
         <span class="s2">"Amount"</span>: 15700,
@@ -5586,6 +5608,55 @@ PaymentIds associated with the identifier.</p>
       <td>2</td>
       <td>Yes</td>
       <td>Number of Installments.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Payment.Chargebacks[n].Amount</code></td>
+      <td>Chargeback amount</td>
+      <td>Number</td>
+      <td>15</td>
+      <td>10000</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Payment.Chargebacks[n].CaseNumber</code></td>
+      <td>Chargeback case number</td>
+      <td>Text</td>
+      <td>16</td>
+      <td>Alphanumeric Text</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Payment.Chargebacks[n].Date</code></td>
+      <td>Chargeback date</td>
+      <td>Date</td>
+      <td>10</td>
+      <td>AAAA-MM-DD</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Payment.Chargebacks[n].ReasonCode</code></td>
+      <td>Chargeback reason code</td>
+      <td>Text</td>
+      <td>10</td>
+      <td>Alphanumeric Text</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Payment.Chargebacks[n].ReasonMessage</code></td>
+      <td>Chargeback reason message</td>
+      <td>Text</td>
+      <td>512</td>
+      <td>Alphanumeric Text</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Payment.Chargebacks[n].Status</code></td>
+      <td>Chargegback status <br /> <a href="https://developercielo.github.iomanual/en/braspag-pagador#list-values-payment.chargebacks[n].status">Values List - Payment.Chargebacks{n}.Status</a></td>
+      <td>Text</td>
+      <td>32</td>
+      <td>Text</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Payment.Chargebacks[n].RawData</code></td>
+      <td>Raw Data</td>
+      <td>Text</td>
+      <td>512</td>
+      <td>Alphanumeric Text</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.CardNumber</code></td>
@@ -20403,6 +20474,31 @@ If this code is displayed, the request contains errors (e.g: size/conditions/reg
     </tr>
     <tr>
       <td>Other</td>
+    </tr>
+  </tbody>
+</table>
+
+<h2 id="values-list---paymentchargebacksnstatus">Values List - Payment.Chargebacks[n].Status</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: left">Value</th>
+      <th style="text-align: left">Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">Received</td>
+      <td style="text-align: left">Chargeback received from acquirer</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">AcceptedByMerchant</td>
+      <td style="text-align: left">Chargeback accepted by merchant. In this case the store understands that it has indeed suffered a chargeback and will not hold the dispute</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">ContestedByMerchant</td>
+      <td style="text-align: left">Chargeback contested by merchant. In this case the store has sent the necessary documents to try to reverse the chargeback</td>
     </tr>
   </tbody>
 </table>
