[61013c40e5a64f7eb7638655fc63aee4612fc37a]: Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -20494,11 +20494,11 @@ If this code is displayed, the request contains errors (e.g: size/conditions/reg
     </tr>
     <tr>
       <td style="text-align: left">AcceptedByMerchant</td>
-      <td style="text-align: left">Chargeback accepted by merchant. In this case the store understands that it has indeed suffered a chargeback and will not hold the dispute</td>
+      <td style="text-align: left">Chargeback accepted by establishment. In this case the establishment understands that it has indeed suffered a chargeback and will not hold the contestation</td>
     </tr>
     <tr>
       <td style="text-align: left">ContestedByMerchant</td>
-      <td style="text-align: left">Chargeback contested by merchant. In this case the store has sent the necessary documents to try to reverse the chargeback</td>
+      <td style="text-align: left">Chargeback contested by establishment. In this case the establishment has sent the necessary documents to try to reverse the chargeback</td>
     </tr>
   </tbody>
 </table>
