--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -19790,11 +19790,11 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
     </tr>
     <tr>
       <td style="text-align: left">AcceptedByMerchant</td>
-      <td style="text-align: left">Chargeback aceito pela loja. Neste caso a loja entende que sofreu de fato um chargeback e não irá realizar a disputa</td>
+      <td style="text-align: left">Chargeback acatado pelo estabelecimento. Neste caso o estabelecimento entende que sofreu de fato um chargeback e não irá realizar a contestação</td>
     </tr>
     <tr>
       <td style="text-align: left">ContestedByMerchant</td>
-      <td style="text-align: left">Chargeback contestado pela loja. Neste caso a loja enviou os documentos necessários para tentar reverter o chargeback</td>
+      <td style="text-align: left">Chargeback contestado pelo estabelecimento. Neste caso o estabelecimento enviou os documentos necessários para tentar reverter o chargeback</td>
     </tr>
   </tbody>
 </table>
