[2e16406cfb133665dbace47032b78064b8857b7a]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -515,6 +515,12 @@ public class EncriptCard {
   <li><strong>Produção</strong> : <strong>api.cielo.com.br</strong>. Deve-se utilizar quando portar as credenciais de produção e um bom nível de maturidade com o ambiente de homologação.</li>
 </ul>
 
+<h1 id="api-de-callback-desfazimento">API de Callback (desfazimento)</h1>
+
+<p>Existe uma API de retorno de chamada para enviar informações sobre as transações de desfazimento, que pode ocorrer no fluxo de transações entre o POS e a plataforma do sistema de autorização.</p>
+
+<p>Será necessário com que o parceiro desenvolva uma API de retorno de chamada para receber as informações sobre aa transações de desfazimento e encaminhar a URL(endpoint)  para nossa equipe através do Zendesk. Lembrando que a API de Callback deve ser gerada no formato restfull.</p>
+
 <h1 id="códigos-da-api">Códigos da API</h1>
 
 <h2 id="erros-da-api">Erros da API</h2>
