[17e196a4a2e002a379d395e0dd015aaca2b99e1e]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -517,7 +517,7 @@ public class EncriptCard {
 
 <h1 id="api-de-callback-desfazimento">API de Callback (desfazimento)</h1>
 
-<p>Existe uma API de retorno de chamada para enviar informações sobre as transações de desfazimento, que pode ocorrer no fluxo de transações entre o POS e a plataforma do sistema de autorização.</p>
+<p>Existe uma API de callback para enviar informações sobre as transações de desfazimento, que pode ocorrer no fluxo de transações entre o POS e a plataforma do sistema de autorização.</p>
 
 <p>Será necessário com que o parceiro desenvolva uma API de retorno de chamada para receber as informações sobre aa transações de desfazimento e encaminhar a URL(endpoint)  para nossa equipe através do Zendesk. Lembrando que a API de Callback deve ser gerada no formato restfull.</p>
 
