[044f080d2ceda1f64c0384e75f6a7dce5499f54b]: Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -5653,7 +5653,7 @@ PaymentIds associated with the identifier.</p>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Chargebacks[n].RawData</code></td>
-      <td>Raw Data</td>
+      <td>Card holder or other message</td>
       <td>Text</td>
       <td>512</td>
       <td>Alphanumeric Text</td>
