[6d51016dfc135f21293143108e805a22eba65ab1]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5676,7 +5676,7 @@ Abaixo especificamos qualquer diferença existente:</p>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Chargebacks[n].RawData</code></td>
-      <td>Dado enviado pela adquirente</td>
+      <td>Titular do cartão ou outra mensagem</td>
       <td>Texto</td>
       <td>512</td>
       <td>Alphanumeric Text</td>
