--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -413,6 +413,48 @@ public class EncriptCard {
 }
 </code></pre></div></div>
 
+<table>
+  <thead>
+    <tr>
+      <th>Propriedade</th>
+      <th>Descrição</th>
+      <th>Tipo</th>
+      <th>Tamanho</th>
+      <th>Obrigatório</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code class="highlighter-rouge">transactionDate</code></td>
+      <td>Data da transação (extraída do QRCode)</td>
+      <td>Texto</td>
+      <td>36</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">terminalLogicalNumber</code></td>
+      <td>Número lógico do POS</td>
+      <td>Texto</td>
+      <td>40</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">authorizationCode</code></td>
+      <td>Código de autorização da transação</td>
+      <td>Texto alfanumérico</td>
+      <td>6</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">nsu</code></td>
+      <td>Número Sequencial Único</td>
+      <td>Texto</td>
+      <td>50</td>
+      <td>Sim</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="dê-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</h1>
 
 <p>Para a composição do payload do <strong>/payments</strong> deve-se mesclar informações provenientes da leitura do QR Code e informações do cartão/portador via aplicativo. Na tabela abaixo é especificado o dê-para dos dados extraídos do QR Code para o payload da requisição. <strong>Para mais informações dos campos provenientes do QR Code verificar a seção 4.</strong></p>
