--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -457,7 +457,7 @@ public class EncriptCard {
 
 <h1 id="dê-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</h1>
 
-<p>Para a composição do payload do <strong>/payments</strong> deve-se mesclar informações provenientes da leitura do QR Code e informações do cartão/portador via aplicativo. Na tabela abaixo é especificado o dê-para dos dados extraídos do QR Code para o payload da requisição. <strong>Para mais informações dos campos provenientes do QR Code verificar a seção 4.</strong></p>
+<p>Para a composição do payload do <strong>/payments</strong> deve-se mesclar informações provenientes da leitura do QR Code e informações do cartão/portador via aplicativo. Na tabela abaixo é especificado o dê-para dos dados extraídos do QR Code para o payload da requisição. <strong>Para mais informações dos campos provenientes do QR Code verificar o próximo item.</strong></p>
 
 <table>
   <thead>
@@ -551,11 +551,6 @@ public class EncriptCard {
 <p>Para a obtenção do POS de homologação deve-se abrir chamado via <a href="https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000324432">Zendesk</a>.</p>
 
 <h1 id="ambientes">Ambientes</h1>
-
-<ul>
-  <li><strong>Homologação</strong> : <strong>apihom.cielo.com</strong>. Deve ser utilizado como o ambiente de desenvolvimento/testes de parceiro.</li>
-  <li><strong>Produção</strong> : <strong>api.cielo.com.br</strong>. Deve-se utilizar quando portar as credenciais de produção e um bom nível de maturidade com o ambiente de homologação.</li>
-</ul>
 
 <h1 id="api-de-callback-desfazimento">API de Callback (desfazimento)</h1>
 
