[ac01e6a2729882b167f6acd72b7938b58dd90199]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -552,6 +552,28 @@ public class EncriptCard {
 
 <h1 id="ambientes">Ambientes</h1>
 
+<table>
+  <thead>
+    <tr>
+      <th>Ambiente</th>
+      <th>Endereço</th>
+      <th>Descrição</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Homologação</td>
+      <td>apihom.cielo.com.br</td>
+      <td>Deve ser utilizado como o ambiente de desenvolvimento/testes de parceiro.</td>
+    </tr>
+    <tr>
+      <td>Produção</td>
+      <td>api.cielo.com.br</td>
+      <td>Deve-se utilizar quando portar as credenciais de produção e um bom nível de maturidade com o ambiente de homologação.</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="api-de-callback-desfazimento">API de Callback (desfazimento)</h1>
 
 <p>Existe uma API de callback para enviar informações sobre as transações de desfazimento, que pode ocorrer no fluxo de transações entre o POS e a plataforma do sistema de autorização.</p>
