[3a0fa944501a43c54acdc042615a28e0bb88c8b0]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -457,7 +457,11 @@ public class EncriptCard {
 
 <h1 id="dê-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</h1>
 
-<p>Para a composição do payload do <strong>/payments</strong> deve-se mesclar informações provenientes da leitura do QR Code e informações do cartão/portador via aplicativo. Na tabela abaixo é especificado o dê-para dos dados extraídos do QR Code para o payload da requisição. <strong>Para mais informações dos campos provenientes do QR Code verificar o próximo item.</strong></p>
+<p>Para a composição do payload do <strong>/payments</strong> deve-se mesclar informações provenientes da leitura do QR Code e informações do cartão/portador via aplicativo. Na tabela abaixo é especificado o dê-para dos dados extraídos do QR Code para o payload da requisição.</p>
+
+<blockquote>
+  <p>Para mais informações dos campos provenientes do QR Code verificar o próximo item.</p>
+</blockquote>
 
 <table>
   <thead>
