--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -520,7 +520,9 @@ public class EncriptCard {
   </tbody>
 </table>
 
-<p><strong>Nota: O campo MerchantAccountInformation.Id tem o tamanho máximo de 10 posições, ao extrair a informação referente no QR Code descontar os dois primeiros e os quatros últimos dígitos.</strong></p>
+<blockquote>
+  <p>Nota: O campo MerchantAccountInformation.Id tem o tamanho máximo de 10 posições, ao extrair a informação referente no QR Code descontar os dois primeiros e os quatros últimos dígitos.</p>
+</blockquote>
 
 <p><strong>Nota: Os campos que não foram especificados na tabela acima não são obrigatórios, porém, caso necessário olhar o swagger no final desta documentação.</strong></p>
 
