[6dbed3bbece70bb5b48963a488abf7cccc8f6d26]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -532,7 +532,9 @@ public class EncriptCard {
 
 <p>Os campos destacados em vermelho são provenientes da análise do QR Code. O ID do campo e seu tamanho são sempre enviados antes do valor correspondente.</p>
 
-<p>“0002<strong>01</strong>0102<strong>12</strong>26410005<strong>Cielo</strong>0116<strong>1234567890120001</strong>0208<strong>20091303</strong>5204<strong>0000</strong>5303<strong>986</strong>5412<strong>000000000100</strong>5802<strong>BR</strong>5905<strong>CIELO</strong>6014<strong>SANTO ANDRE SP</strong>801010033<strong>”https://www.cielo.com.br/qrcode”</strong>0116<strong>13050329197F190A</strong>0212<strong>150518113349</strong>0304<strong>1000</strong>0404<strong>0001</strong>0502<strong>00</strong>0602<strong>01</strong>6304<strong>9872”</strong></p>
+<blockquote>
+  <p>“0002<strong>01</strong>0102<strong>12</strong>26410005<strong>Cielo</strong>0116<strong>1234567890120001</strong>0208<strong>20091303</strong>5204<strong>0000</strong>5303<strong>986</strong>5412<strong>000000000100</strong>5802<strong>BR</strong>5905<strong>CIELO</strong>6014<strong>SANTO ANDRE SP</strong>801010033<strong>”https://www.cielo.com.br/qrcode”</strong>0116<strong>13050329197F190A</strong>0212<strong>150518113349</strong>0304<strong>1000</strong>0404<strong>0001</strong>0502<strong>00</strong>0602<strong>01</strong>6304<strong>9872”</strong></p>
+</blockquote>
 
 <h1 id="como-testar">Como Testar</h1>
 
