[9c4eae7906a20117d08359a416dd0cae0ffb47ec]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -377,7 +377,7 @@ public class EncriptCard {
     </tr>
     <tr>
       <td><code class="highlighter-rouge">technology.identifier</code></td>
-      <td>Identificador da transação. Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Identificador da transação. Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Texto alfanumérico</td>
       <td>16</td>
       <td>Sim</td>
@@ -391,56 +391,56 @@ public class EncriptCard {
     </tr>
     <tr>
       <td><code class="highlighter-rouge">amount</code></td>
-      <td>Valor da transação (em ambiente de homologação enviar apenas número inteiros). Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Valor da transação (em ambiente de homologação enviar apenas número inteiros). Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Número</td>
       <td>16</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">paymentInstallments</code></td>
-      <td>Número de parcelas. Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Número de parcelas. Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Número</td>
       <td>2</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">terminalLogicalNumber</code></td>
-      <td>Número lógico do POS. Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Número lógico do POS. Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Número</td>
       <td>40</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">paymentDate</code></td>
-      <td>Data e hora da transação. Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Data e hora da transação. Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Texto</td>
       <td>30</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">mainProduct.id</code></td>
-      <td>Produto matriz. Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Produto matriz. Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Número</td>
       <td>4</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">subProduct.id</code></td>
-      <td>Produto secundário. Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Produto secundário. Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Número</td>
       <td>4</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">merchantAccountInformation.id</code></td>
-      <td>Número do estabelecimento comercial. Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Número do estabelecimento comercial. Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Número</td>
       <td>1</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">merchantAccountInformation.merchantName</code></td>
-      <td>Nome do estabelecimento comercial. Campo proveniente do QRCode, veja <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Dê-para QR Code x Recurso Payments</a></td>
+      <td>Nome do estabelecimento comercial. Campo proveniente do QRCode, <a href="https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments">Veja layout</a></td>
       <td>Número</td>
       <td>1</td>
       <td>Sim</td>
